objects/amc__Budget_Item__c.object
<CustomObject>
    <fields>
        <fullName>amc__Billable_Budget__c</fullName>
        <inlineHelpText>Identifies the Billable Budget for this Budget Item</inlineHelpText>
        <label>Billable Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Category__c</fullName>
        <inlineHelpText>Identifies the Category this Budget Item relates to</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Completed_Expenses_Billable__c</fullName>
        <inlineHelpText>Sum value of Amount field from all Expenses associated to this Budget Item where Approval Status = Approved</inlineHelpText>
        <label>Completed Expenses (Billable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Completed_Expenses_Cost__c</fullName>
        <inlineHelpText>Sum value of Cost Amount field from all Expenses associated to this Budget Item where Approval Status = Approved</inlineHelpText>
        <label>Completed Expenses (Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Cost_Budget__c</fullName>
        <inlineHelpText>Identifies the Cost Budget for this Budget Item</inlineHelpText>
        <label>Cost Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__GM_Budget_Total_Completed_Cost__c</fullName>
        <formula>( amc__Billable_Budget__c  -  amc__Total_Completed_Cost__c ) /  amc__Billable_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: (Billable Budget - Total Completed Cost) / Billable Budget</inlineHelpText>
        <label>GM% Budget - Total Completed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>amc__GM_Budget_Total_Forecast_Cost__c</fullName>
        <formula>( amc__Billable_Budget__c  -  amc__Total_Forecast_Cost__c ) /  amc__Billable_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: (Billable Budget - Total Forecast Cost) / Billable Budget</inlineHelpText>
        <label>GM% Budget - Total Forecast Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>amc__GM_Budget_Total_Scheduled_Cost__c</fullName>
        <formula>( amc__Billable_Budget__c  -  amc__Total_Scheduled_Cost__c ) /  amc__Billable_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: (Billable Budget - Total Scheduled Cost) / Billable Budget</inlineHelpText>
        <label>GM% Budget - Total Scheduled Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>amc__GM_Budget__c</fullName>
        <formula>( amc__Billable_Budget__c  -  amc__Cost_Budget__c ) /  amc__Billable_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: (Billable Budget - Cost Budget) / Billable Budget</inlineHelpText>
        <label>GM% Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Completed_Billable__c</fullName>
        <inlineHelpText>Sum value of Hours Completed (Billable) field from Actions associated to this Budget Item</inlineHelpText>
        <label>Hours Completed (Billable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Completed_Cost__c</fullName>
        <inlineHelpText>Sum value of Hours Completed (Cost) field from Actions associated to this Budget Item</inlineHelpText>
        <label>Hours Completed (Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Remaining_Billable__c</fullName>
        <inlineHelpText>Sum value of Hours Remaining (Billable) field from Actions associated to this Budget Item</inlineHelpText>
        <label>Hours Remaining (Billable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Remaining_Cost__c</fullName>
        <inlineHelpText>Sum value of Hours Remaining (Cost) field from Actions associated to this Budget Item</inlineHelpText>
        <label>Hours Remaining (Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Scheduled_Billable__c</fullName>
        <inlineHelpText>Sum value of Hours Scheduled (Billable) field from Actions associated to this Budget Item</inlineHelpText>
        <label>Hours Scheduled (Billable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Scheduled_Cost__c</fullName>
        <inlineHelpText>Sum value of Hours Scheduled (Cost) field from Actions associated to this Budget Item</inlineHelpText>
        <label>Hours Scheduled (Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Material_Costs_Completed_Billable__c</fullName>
        <inlineHelpText>Sum value of Material Costs Completed (Billable) field from Actions associated to this Budget Item</inlineHelpText>
        <label>Material Costs Completed (Billable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Material_Costs_Completed_Cost__c</fullName>
        <inlineHelpText>Sum value of Material Costs Completed (Cost) field from Actions associated to this Budget Item</inlineHelpText>
        <label>Material Costs Completed (Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Material_Costs_Remaining_Billable__c</fullName>
        <inlineHelpText>Sum value of Material Costs Remaining (Billable) field from Actions associated to this Budget Item</inlineHelpText>
        <label>Material Costs Remaining (Billable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Material_Costs_Remaining_Cost__c</fullName>
        <inlineHelpText>Sum value of Material Costs Remaining (Cost) field from Actions associated to this Budget Item</inlineHelpText>
        <label>Material Costs Remaining (Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Material_Costs_Scheduled_Billable__c</fullName>
        <inlineHelpText>Sum value of Material Costs Scheduled (Billable) field from Actions associated to this Budget Item</inlineHelpText>
        <label>Material Costs Scheduled (Billable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Material_Costs_Scheduled_Cost__c</fullName>
        <inlineHelpText>Sum value of Material Costs Scheduled (Cost) field from Actions associated to this Budget Item</inlineHelpText>
        <label>Material Costs Scheduled (Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__P_L_Budget_Total_Completed_Cost__c</fullName>
        <formula>amc__Billable_Budget__c  -  amc__Total_Completed_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Sum of Billable Budget - Total Completed Cost</inlineHelpText>
        <label>P&amp;L Budget - Total Completed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__P_L_Budget_Total_Forecast_Cost__c</fullName>
        <formula>amc__Billable_Budget__c  -  amc__Total_Forecast_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Sum of Billable Budget - Total Forecast Cost</inlineHelpText>
        <label>P&amp;L Budget - Total Forecast Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__P_L_Budget_Total_Scheduled_Cost__c</fullName>
        <formula>amc__Billable_Budget__c  -  amc__Total_Scheduled_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Sum of Billable Budget - Total Scheduled Cost</inlineHelpText>
        <label>P&amp;L Budget - Total Scheduled Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__P_L_Budget__c</fullName>
        <formula>amc__Billable_Budget__c  -  amc__Cost_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Sum of Billable Budget - Cost Budget</inlineHelpText>
        <label>P&amp;L Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Project__c</fullName>
        <inlineHelpText>Identifies the Project this Budget Item relates to</inlineHelpText>
        <label>Project</label>
        <referenceTo>amc__Project__c</referenceTo>
        <relationshipLabel>Budget Items</relationshipLabel>
        <relationshipName>Budget_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>amc__Remaining_Expenses_Billable__c</fullName>
        <inlineHelpText>Sum value of Amount field from all Expenses associated to this Budget Item where Approval Status != Approved</inlineHelpText>
        <label>Remaining Expenses (Billable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Remaining_Expenses_Cost__c</fullName>
        <inlineHelpText>Sum value of Cost Amount field from all Expenses associated to this Budget Item where Approval Status != Approved</inlineHelpText>
        <label>Remaining Expenses (Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Scheduled_Expenses_Billable__c</fullName>
        <inlineHelpText>Sum value of Amount field from all Expenses associated to this Budget Item</inlineHelpText>
        <label>Scheduled Expenses (Billable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Scheduled_Expenses_Cost__c</fullName>
        <inlineHelpText>Sum value of Cost Amount field from all Expenses associated to this Budget Item</inlineHelpText>
        <label>Scheduled Expenses (Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Total_Completed_Billable__c</fullName>
        <formula>amc__Hours_Completed_Billable__c  +  amc__Completed_Expenses_Billable__c  +  amc__Material_Costs_Completed_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Sum of Hours Completed (Billable) + Completed Expenses (Billable) + Material Costs Completed (Billable)</inlineHelpText>
        <label>Total Completed Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Total_Completed_Cost__c</fullName>
        <formula>amc__Hours_Completed_Cost__c  +  amc__Completed_Expenses_Cost__c  +  amc__Material_Costs_Completed_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Sum of Hours Completed (Cost) + Completed Expenses (Cost) + Material Costs Completed (Cost)</inlineHelpText>
        <label>Total Completed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Total_Forecast_Billable__c</fullName>
        <formula>amc__Total_Completed_Billable__c  +  amc__Total_Remaining_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Sum of Total Completed Billable + Total Remaining Billable</inlineHelpText>
        <label>Total Forecast Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Total_Forecast_Cost__c</fullName>
        <formula>amc__Total_Completed_Cost__c  +  amc__Total_Remaining_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Sum of Total Completed Cost + Total Remaining Cost</inlineHelpText>
        <label>Total Forecast Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Total_Remaining_Billable__c</fullName>
        <formula>amc__Hours_Remaining_Billable__c  +  amc__Remaining_Expenses_Billable__c  +  amc__Material_Costs_Remaining_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Sum of Hours Remaining (Billable) + Remaining Expenses (Billable) + Material Costs Remaining (Billable)</inlineHelpText>
        <label>Total Remaining Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Total_Remaining_Cost__c</fullName>
        <formula>amc__Hours_Remaining_Cost__c  +  amc__Remaining_Expenses_Cost__c  +  amc__Material_Costs_Remaining_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Sum of Hours Remaining (Cost) + Remaining Expenses (Cost) + Material Costs Remaining (Cost)</inlineHelpText>
        <label>Total Remaining Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Total_Scheduled_Billable__c</fullName>
        <formula>amc__Hours_Scheduled_Billable__c  +  amc__Scheduled_Expenses_Billable__c  +  amc__Material_Costs_Scheduled_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Sum of Hours Scheduled (Billable) + Scheduled Expenses (Billable) + Material Costs Scheduled (Billable)</inlineHelpText>
        <label>Total Scheduled Billable</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Total_Scheduled_Cost__c</fullName>
        <formula>amc__Hours_Scheduled_Cost__c  +  amc__Scheduled_Expenses_Cost__c  +  amc__Material_Costs_Scheduled_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Sum of Hours Scheduled (Cost) + Scheduled Expenses (Cost) + Material Costs Scheduled (Cost)</inlineHelpText>
        <label>Total Scheduled Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__VAR_Budget_Total_Completed_Billable__c</fullName>
        <formula>amc__Billable_Budget__c  -  amc__Total_Completed_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Billable Budget - Total Completed Billable</inlineHelpText>
        <label>VAR Budget - Total Completed Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__VAR_Budget_Total_Forecast_Billable__c</fullName>
        <formula>amc__Billable_Budget__c  -  amc__Total_Forecast_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Billable Budget - Total Forecast Billable</inlineHelpText>
        <label>VAR Budget - Total Forecast Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__VAR_Budget_Total_Scheduled_Billable__c</fullName>
        <formula>amc__Billable_Budget__c  -  amc__Total_Scheduled_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Billable Budget - Total Scheduled Billable</inlineHelpText>
        <label>VAR Budget - Total Scheduled Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Budget Item</label>
    <listViews>
        <fullName>amc__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Budget Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>